fix inconsistent spacing in app mode

--- a/src/header/css/header-account.pcss
+++ b/src/header/css/header-account.pcss
@@ -66,7 +66,7 @@
 	@apply --normalize-button;
 	@apply --unset-button;
 
-	padding-inline: calc(32px + 16px + 12px) 32px;
+	padding-inline: calc(32px + 12px + 12px) 32px;
 	cursor: pointer;
 	position: relative;
 	text-align: start;
@@ -106,7 +106,7 @@
 
 .esri-header-account-image {
 	border-radius: 50%;
-	inset-start: calc(50% - 32px / 2) 16px;
+	inset-start: calc(50% - 32px / 2) 12px;
 	position: absolute;
 	size: 32px;
 }
